--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
  * @Description: 
  * @Author: lixin
  * @Date: 2021-08-09 17:19:30
- * @LastEditTime: 2021-12-14 14:45:59
+ * @LastEditTime: 2022-01-11 10:23:00
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>zkPASS</title>
+    <title>zkID</title>
 </head>
 <body>
     <div id='root'></div>
